--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport" :  "*",
     "passport-facebook"    :  "*",
     "facebook-sdk" :  "*",
+    "mongodb" :  "*",
     "mongojs" :  "*",
     "socket.io"   :  "*",
     "jade"   :  "*",
