--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies" : {
     "connect"   :  "*",
+    "stylus"   :  "*",
     "express" :  "*",
     "passport" :  "*",
     "passport-facebook"    :  "*",
