--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies" : {
     "connect"   :  "*",
     "stylus"   :  "*",
+    "jeet"   :  "*",
     "express" :  "*",
     "passport" :  "*",
     "passport-facebook"    :  "*",
