--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "browserify": "^3.33.0",
+    "browserify-shim": "*",
     "gulp": "^3.5.6",
     "gulp-browserify": "^0.5.0"
   }
