- Going to try getting Facebook feed onto home page using sockets as data   source

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "method-override": "*",
     "passport": "*",
     "passport-facebook": "*",
-    "facebook-sdk": "*",
+    "facebook-node-sdk": "*",
     "mongodb": "*",
     "mongojs": "*",
     "socket.io": "*",
