- Started populating with content from Markdown files - Need to come up with a few more articles - Content directories are for Markdown files that are slurped into the   website - Will later write routing classes that directly read folders in order to   generate the website content. It's inline for now.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "*",
     "ember": "~0.9",
     "handlebars": "*",
-    "jquery": "*"
+    "jquery": "*",
+    "markdown": "*"
   },
   "license": "MIT",
   "engines": {
