--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Langenium",
   "preferGlobal": true,
-  "version": "0.5.1-prealpha",
+  "version": "0.5.1-alpha",
   "author": "Paul Brzeski <mail@paulbrzeski.com>",
   "description": "The Langenium server application",
   "repository": "https://github.com/paulbrzeski/Langenium",
