--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "url": "https://github.com/paulbrzeski/Langenium/issues"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-latest": "^6.16.0",
     "nw": "~0.12.3"
   }
 }
