--- a/new/package.json
+++ b/new/package.json
@@ -17,6 +17,9 @@
     "url": "https://github.com/paulbrzeski/Langenium/issues"
   },
   "dependencies": {
-    "pug": "^2.0.0-beta6"
+    "axis": "^0.6.1",
+    "pug": "^2.0.0-beta6",
+    "jeet": "^7.1.0",
+    "stylus": "^0.54.5"
   }
 }
