--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "new/vendor/Live2D_ThreeJS"]
 	path = new/vendor/Live2D_ThreeJS
 	url = https://github.com/paulbrzeski/Live2D_ThreeJS.git
+[submodule "new/vendor/jquery"]
+	path = new/vendor/jquery
+	url = https://github.com/jquery/jquery.git
+[submodule "new/vendor/threejs"]
+	path = new/vendor/threejs
+	url = https://github.com/mrdoob/three.js.git
