--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "new/vendor/threejs"]
 	path = new/vendor/threejs
 	url = https://github.com/mrdoob/three.js.git
+[submodule "new/vendor/Live2D-WebGL-SDK"]
+	path = new/vendor/Live2D-WebGL-SDK
+	url = https://github.com/paulbrzeski/Live2D-WebGL-SDK.git
