--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,20 @@
 [submodule "new/vendor/Live2D_ThreeJS"]
 	path = new/vendor/Live2D_ThreeJS
 	url = https://github.com/paulbrzeski/Live2D_ThreeJS.git
+	ignore = dirty
 [submodule "universe"]
 	path = universe
 	url = https://github.com/paulbrzeski/Langenium-Universe.git
+	ignore = dirty
 [submodule "new/vendor/jquery"]
 	path = new/vendor/jquery
 	url = https://github.com/jquery/jquery.git
+	ignore = dirty
 [submodule "new/vendor/Live2D-WebGL-SDK"]
 	path = new/vendor/Live2D-WebGL-SDK
 	url = https://github.com/paulbrzeski/Live2D-WebGL-SDK.git
+	ignore = dirty
 [submodule "new/vendor/threejs"]
 	path = new/vendor/threejs
 	url = https://github.com/mrdoob/three.js.git
+	ignore = dirty
