Making changes for Issue 8

--- a/new/package.json
+++ b/new/package.json
@@ -22,5 +22,8 @@
     "jstransformer-markdown": "^1.1.1",
     "pug": "^2.0.0-beta6",
     "stylus": "^0.54.5"
+  },
+  "devDependencies": {
+    "pugjs-brunch": "^2.8.5"
   }
 }
