--- a/new/package.json
+++ b/new/package.json
@@ -14,7 +14,9 @@
   ],
   "scripts": {
     "build": "pug pages -P -o . -b . && stylus styles -o dist",
-    "dev": "pug pages -P -o . -b . -w && stylus styles -o dist -w"
+    "css": "stylus styles -o dist -w",
+    "pug": "pug pages -P -o . -b . -w",
+    "dev": "http-server -p 80 -c-1 ."
   },
   "author": "Paul Brzeski",
   "license": "GNU-GPL-v3",
