--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,19 @@
+[submodule "vendor/Live2D_ThreeJS"]
+	path = vendor/Live2D_ThreeJS
+	url = https://github.com/paulbrzeski/Live2D_ThreeJS.git
+	ignore = dirty
+[submodule "vendor/jquery"]
+	path = vendor/jquery
+	url = https://github.com/jquery/jquery.git
+	ignore = dirty
+[submodule "vendor/Live2D-WebGL-SDK"]
+	path = vendor/Live2D-WebGL-SDK
+	url = https://github.com/paulbrzeski/Live2D-WebGL-SDK.git
+	ignore = dirty
+[submodule "vendor/threejs"]
+	path = vendor/threejs
+	url = https://github.com/mrdoob/three.js.git
+	ignore = dirty
 [submodule "universe"]
 	path = universe
 	url = https://github.com/paulbrzeski/Langenium-Universe.git
