--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = universe
 	url = https://github.com/paulbrzeski/Langenium-Universe.git
 	ignore = dirty
+[submodule "vendor/Semantic-UI"]
+	path = vendor/Semantic-UI
+	url = https://github.com/Semantic-Org/Semantic-UI.git
