--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "pug": "pug pages -P -o . -b . -w",
     "rollup": "rollup -c -w",
     "dev-osx": "sudo http-server -p 80 -c-1 .",
-    "dev": "http-server -p 80 -c-1 .",
-    "bash-dev": "npm run css & npm run pug & npm run rollup & npm run dev",
-    "thumb": "thumb"
+    "dev": "http-server -p 80 -c-1 ."
   },
   "author": "Paul Brzeski",
   "license": "GNU-GPL-v3",
