--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "langenium"
   ],
   "scripts": {
-    "build": "pug pages -P -o . -b . && stylus styles -o dist",
+    "build": "pug content -P -o . -b . && stylus styles -o dist",
     "css": "stylus styles -o dist -w",
-    "pug": "pug pages -P -o . -b . -w",
+    "pug": "pug content -P -o . -b . -w",
     "rollup": "rollup -c -w",
     "dev-osx": "sudo http-server -p 80 -c-1 .",
     "dev": "http-server -p 80 -c-1 ."
