--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "alpinejs": "^3.13.3",
     "cross-env": "^7.0.3",
     "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
