--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "deepmerge": "^4.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.3"
   }
