--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "three": "^0.153.0",
-    "three-bvh-csg": "^0.0.9"
+    "three-bvh-csg": "^0.0.9",
+    "tweakpane": "^4.0.3"
   }
 }
