--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,15 @@
   "description": "Backend server for facilitating multiplayer sessions of Langenium.",
   "main": "server.js",
   "scripts": {
-    "start": "npx nodemon server"
+    "start": "npx tsx server"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "deepmerge": "^4.3.1",
     "express": "^4.18.2",
-    "socket.io": "^4.7.3"
+    "socket.io": "^4.7.3",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
