v6 - Removing player on disconnect

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Backend server for facilitating multiplayer sessions of Langenium.",
   "main": "server.js",
   "scripts": {
+    "dev": "npx tsx watch server",
     "start": "npx tsx server"
   },
   "author": "",
