--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "deepmerge": "^4.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.3",
     "tsx": "^4.7.0",
