--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,10 @@
     "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
     "npm-run-all": "^4.1.5",
+    "postprocessing": "^6.35.4",
     "pug": "^3.0.2",
-    "three": "^0.153.0",
-    "three-bvh-csg": "^0.0.9",
+    "three": "^0.163.0",
+    "three-bvh-csg": "^0.0.16",
     "tweakpane": "^4.0.3"
   }
 }
