--- a/client/package.json
+++ b/client/package.json
@@ -15,15 +15,16 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "alpinejs": "^3.13.3",
+    "alpinejs": "^3.14.1",
     "cross-env": "^7.0.3",
     "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
     "npm-run-all": "^4.1.5",
-    "postprocessing": "^6.35.4",
+    "postprocessing": "^6.35.5",
     "pug": "^3.0.2",
-    "three": "^0.163.0",
+    "three": "^0.165.0",
     "three-bvh-csg": "^0.0.16",
+    "three-mesh-bvh": "^0.7.5",
     "tweakpane": "^4.0.3"
   }
 }
