--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "version": "0.6.0-Alpha",
   "description": "The Langenium Game, Server and Client",
   "repository": "https://github.com/paulbrzeski/Langenium",
-  "engines" : { 
-    "npm" : ">=10.0.0 <11.0.0",
-    "node" : ">=22.0.0 <23.0.0"
+  "engines": {
+    "npm": ">=10.0.0 <11.0.0",
+    "node": ">=22.0.0 <23.0.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
@@ -29,6 +29,7 @@
     "three": "^0.165.0",
     "three-bvh-csg": "^0.0.16",
     "three-mesh-bvh": "^0.7.5",
-    "tweakpane": "^4.0.3"
+    "tweakpane": "^4.0.3",
+    "yuka": "^0.7.8"
   }
 }
