--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,8 @@
     "npm-run-all": "^4.1.5",
     "postprocessing": "^6.36.1",
     "pug": "^3.0.3",
+    "pug-stylus": "^0.0.5",
+    "stylus": "^0.63.0",
     "three": "^0.168.0",
     "three-bvh-csg": "^0.0.16",
     "three-mesh-bvh": "^0.7.6",
