--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,16 @@
   "scripts": {
     "preinstall": "npm install -g pm2",
     "dev": "npx tsx watch server",
-    "start": "npx tsx server"
+    "prod": "npx tsx server"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "deepmerge": "^4.3.1",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.3",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "socket.io": "^4.8.1",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
   }
 }
